# tp_m2_infographie

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: imGUIviewer.h  utils.hpp
src/: explicationLaplacien.md  main.cpp  test.cpp  test.txt  utils.cpp  viewer.cpp
